[project]
name = "bwa-meth"
version = "0.1.0"
description = "Refactor of bwameth"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.12"
dependencies = [
    "pyfastx>=2.3.0",
    "pysam>=0.23.3",
    "sh>=2.2.2",
    "typer>=0.24.0",
    "xopen>=2.0.2",
]

[project.scripts]
bwa-meth = "bwa_meth:app"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = true
